log
Wed, Mar 19, 2025  8:44:08 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:05:52 AM: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:52:7: error: parameter names (without types) in function declaration [-Werror]
       void pushBack(L, valorDeK);// VA EL VALOR DE K O PODRIA reservar memoria directamente en cada k?
       ^~~~
exercises.c:46:10: error: variable 'elemento' set but not used [-Werror=unused-but-set-variable]
    void* elemento = first(L);
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d9f1a74
Wed, Mar 19, 2025  9:08:08 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:46:10: error: variable 'elemento' set but not used [-Werror=unused-but-set-variable]
    void* elemento = first(L);
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c208b95
Wed, Mar 19, 2025  9:08:50 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
d8abdf7
